fix: update dark mode styles, add selection colors, and implement glare effect for project images

--- a/app/assets/scss/_dark-mode.scss
+++ b/app/assets/scss/_dark-mode.scss
@@ -16,9 +16,18 @@ html.dark {
         h6 {
             color: $light;
         }
+
+        &::selection {
+            background-color: $gray-700;
+            color: $white;
+        }
     }
 
     .img-profile {
+        background-color: $gray-900;
+    }
+
+    .bg-image {
         background-color: $gray-900;
     }
 
@@ -56,12 +65,6 @@ html.dark {
     }
 
     .projects-page {
-        .projects-thumb {
-            img {
-                background-color: $gray-900;
-            }
-        }
-
         .projects-credits {
             .title {
                 color: $light;
@@ -90,6 +93,26 @@ html.dark {
     .error-section {
         a {
             color: $primary;
+        }
+    }
+
+    @media (min-width: 576px) {
+        .card {
+            &.deliveboo {
+                &:hover {
+                    .card-image {
+                        box-shadow: 0 0 3rem rgba($orange, 0.4);
+                    }
+                }
+            }
+
+            &.boolzapp {
+                &:hover {
+                    .card-image {
+                        box-shadow: 0 0 3rem rgba($green, 0.4);
+                    }
+                }
+            }
         }
     }
 }
